<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".gamecode.gui.GameOver">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:gravity="center"
        android:textSize="@dimen/big_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <Button
            android:id="@+id/back"
            android:layout_width="@dimen/button_width_small"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/back_button"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/restart"
            android:layout_width="@dimen/button_width_small"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/restart_button"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>


</LinearLayout>